fix spacing

--- a/css/custom.less
+++ b/css/custom.less
@@ -175,7 +175,7 @@ nav a{
   }
 
   #status {
-    letter-spacing: -4px;
+    letter-spacing: -3px;
     text-transform: uppercase;
     position: absolute;
     top: 64px;
@@ -185,6 +185,18 @@ nav a{
     left: 50%;
     font-weight: 100;
 
+    small {
+/*      left: 50%;*/
+/*      width: 300px;*/
+/*      top: 80px;*/
+
+/*      margin-left: -150px;*/
+      position: absolute;
+      font-size: 100%;
+/*      font-size: 32px;*/
+      display: none;
+/*      color: #888;*/
+    }
 
     span {
       top: -2px;
